Add netmond, a program that allows conections (via a UNIX domain socket) from apps being monitored with libnetmon. This is so that we can invoke netmond from the monitor, and attach whatever process we want to it.
If LIBNETMON_SOCKPATH is set in the environment, libnetmon will now
spit results to it rather than stdout.

--- a/pelab/libnetmon/GNUmakefile
+++ b/pelab/libnetmon/GNUmakefile
@@ -9,7 +9,7 @@ else
     LD_FLAGS=
 endif
 
-all: libnetmon.so
+all: libnetmon.so netmond
 
 %.so: %.c %.h
 	$(CC) $(CFLAGS) $(LD_FLAGS) -shared -o $@ $<
